front/src/routes/styles.css
@import '@fontsource/fira-mono';

:root {
	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
	--font-mono: 'Fira Mono', monospace;
	--color-bg-dark-1: #2e51a2;
	--color-bg-dark-2: #03141b;
	--color-bg-dark-3: #2c2c2c;
	--color-bg-light: #eee;
	--color-bg-light-2: #a4abbb;
	--color-text-dark: #ddd;
	--color-text-light: #2e51a2;
	--column-width: 42rem;
	--column-margin-top: 4rem;

	font-family: var(--font-body);
	color: var(--color-text);
}

body {
	min-height: 100vh;
	margin: 0;
	background-attachment: fixed;
	background-color: var(--color-bg-dark-2);
}

h1,
h2,
p {
	font-weight: 400;
}

p {
	line-height: 1.5;
}

a {
	color: var(--color-theme-1);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

h1 {
	font-size: 2rem;
	text-align: center;
}

h2 {
	font-size: 1rem;
}

pre {
	font-size: 16px;
	font-family: var(--font-mono);
	background-color: rgba(255, 255, 255, 0.45);
	border-radius: 3px;
	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
	padding: 0.5em;
	overflow-x: auto;
	color: var(--color-text);
}

.text-column {
	display: flex;
	max-width: 48rem;
	flex: 0.6;
	flex-direction: column;
	justify-content: center;
	margin: 0 auto;
}

input,
button {
	font-size: inherit;
	font-family: inherit;
}
button {
	background: var(--color-bg-light);
	border: solid 1px;
}

button:focus:not(:focus-visible) {
	outline: none;
}

@media (min-width: 720px) {
	h1 {
		font-size: 2.4rem;
	}
}

.visually-hidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: auto;
	margin: 0;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
	white-space: nowrap;
}

.modal {
	border-radius: 5px;
	background: var(--color-bg-dark-3);
	display: inline-block;
	padding: 1em;
	width: 100%;
	box-shadow: 1px 1px 5px 0px black;
	border: solid 1px black;
	opacity: 0.9;
}
.modal h3 {
	color: white;
}
.modalbg {
	height: 100vh;
	width: 100vw;
	position: absolute;
	z-index: 1;
	display: flex;
	justify-content: center;
	top: 0;
	left: 0;
}
.svgIcon {
	height: 1.5rem;
	width: 1.5rem;
	padding: 0.15rem 0rem;
	margin: 0.1rem;
}
.svgIcon:hover {
	cursor: pointer;
	color: var(--color-text-light);
	background: var(--color-bg-light);
	border-radius: 3px;
}
.greentext {
	color: #789922;
}
.bluetext {
	color: #1b60ff;
}
.redtext {
	color: #ff0000;
}
.spoilertext {
	background: black;
	color: black;
}
.spoilertext:hover {
	color: var(--color-text-dark);
}

